--- a/clockwork/Clockwork.Web/Views/Home/Index.cshtml
+++ b/clockwork/Clockwork.Web/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿<script src="~/Scripts/JavaScript.js"></script>
 <link rel="stylesheet" href="~/Scripts/StyleSheet1.css" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="height=device-Height, initial-scale=1">
 
 <body>
     <div id="mainBox">
-        <h2>AWH Clockwork Project @ViewData["Version"] on @ViewData["Runtime"]!</h2>
+        <h2 id="title">AWH Clockwork Project @ViewData["Version"] on @ViewData["Runtime"]!</h2>
 
 
         <button id="outputbutton" type="submit" onclick="UserAction()">Get the time</button>
